# charter-shield

./: .gitignore  Dockerfile  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
data/: airports.csv  historical_trips.csv
skyprice/: __main__.py  api.py  backtest.py  cli.py  core.py  data.py  engine.py  viz.py
skyprice/risks/: base.py  deadhead.py  fbo.py  fuel.py  weather.py
tests/: test_core.py  test_engine.py  test_new_features.py
