[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyprice"
version = "0.1.0"
description = "Monte Carlo pricing engine for fixed-price charter aviation contracts"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
include = ["skyprice*"]

[tool.coverage.run]
omit = ["skyprice/api.py", "skyprice/cli.py", "skyprice/viz.py", "skyprice/__main__.py", "skyprice/backtest.py"]
